testsuite/poke.pkl/struct-types-diag-1.pk
/* { dg-do compile } */

deftype Packet = struct {[][]int; [2][1]int foo;}; /* { dg-error "" } */

